# DeccanEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.md  build.sh  config.h  core.c  core.h  deccan.h  deccantool  deccantool.cmd  input.c  input.h  log.h  main.c  meson.build  player.c  player.h  renderer.c  renderer.h  scene.c  scene.h  timer.c  timer.h
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
corelib/: Asset.c  Asset.h  Config.h  Core.c  Core.h  Deccan.h  Main.c  Message.c  Message.h  Settings.h  Structures.h  Timer.c  Timer.h  Variable.c  Variable.h
corelib/Asset/: Asset.c  FontAsset.c  FontAsset.h  Importer.c  Importer.h  SpriteAsset.c  SpriteAsset.h
corelib/Behaviour/: Behaviours.h
corelib/Behaviour/Physics/: Collision.c  Collision.h  Physics.h
corelib/Core/: Array.c  Array.h  Asset.c  Asset.h  Core.c  Core.h  FileSys.c  FileSys.h  Handle.c  Handle.h  Memory.c  Memory.h  SDLHelper.c  SDLHelper.h  String.c  String.h  Timer.c  Timer.h  Utils.c  Utils.h  Variable.c  Variable.h
corelib/Core/Asset/: AssetDescriptor.h  AssetManager.c  AssetManager.h
corelib/Core/Input/: Input.c  Input.h  InputCodes.h
corelib/Core/Module/: Module.c  Module.h
corelib/Core/Shell/: Shell.c  Shell.h
corelib/Input/: Input.c  Input.h  InputCodes.h
corelib/Main/: Main.c  Sources.c
corelib/Math/: Vector2.h  Vector3.h
corelib/Modules/: Modules.h
corelib/Modules/Imgui/: Imgui.c  Imgui.h
corelib/Modules/Physics/: Collision.c  Collision.h
corelib/Renderer/: Camera.c  Camera.h  Color.c  Color.h  Components.c  Components.h  Draw.c  Font.c  Framebuffer.c  GenericPipeline.c  GenericPipeline.h  PrimitiveGeometry.c  PrimitiveGeometry.h  Primitives.c  Primitives.h  RenderTypes.h  Renderer.c  Renderer.h  TextRendering.c  TextRendering.h  Texture.c  Texture.h
corelib/Renderer-sokol/: GenericPipeline.c  PrimitiveGeometry.c  PrimitiveGeometry.h  RenderTypes.h  Renderer.c  Texture.c
corelib/Renderer/Components/: Drawable.c  Drawable.h  DrawableGeometry.c  DrawableGeometry.h
corelib/Scene/: ComponentList.h  Components.c  Components.h  ECSystem.c  ECSystem.h  Flecs.c  Flecs.h  Object.c  Object.h  Scene.c  Scene.h
corelib/Scene/Components/: .Collider.c.swp  Collider.c  Collider.h  Name.c  Name.h  State2D.c  State2D.h  Transform.c  Transform.h
corelib/World/: Camera.c  Camera.h  Components.c  Components.h  DefaultAssets.c  DefaultAssets.h  Flecs.h  Object.c
corelib/World/Components/: Collider.c  Collider.h  ColliderExtras.c  Drawable.c  Drawable.h  DrawableGeometry.c  DrawableGeometry.h  DrawableSprite.h  SpriteRenderer.h  Transform.h
corelib/World/Resources/: Sprite.c  Sprite.h
corelib/World/Systems/: Rendering.c
depends/: meson.build  stb_ds.h
depends/SDL2/: meson.build
depends/SDL2_ttf/: meson.build
depends/glad/src/: glad.c
include/Deccan/: Asset.h  Config.h  Core.h  Deccan.h  Info.h  Input.h  Object.h  Physics.h  Renderer.h  Scene.h
include/deccanengine/: config.h  deccan.h
include/deccanengine/core/: core.h  file_sys.h  handle.h  maths.h  string.h  timer.h  utils.h
include/deccanengine/physics/: collision.h  physics.h
include/deccanengine/renderer/: color.h  framebuffer.h  generic_pipeline.h  render_types.h  renderer.h  texture.h
include/deccanengine/world/: camera.h  flecs.h  object.h  scene.h  scene_layer.h  world.h
proj/: build.sh  build1.bat
proj/cmake/: FindSDL2.cmake
resources/: LOGO_LICENSE.md
sandbox/: .player.c.swp  ImGui.h  Texture.c  Texture.h  main.c  player.c  player.h
scripts/: install_sdl_on_windows.bat
src/: Deccan.c  asset.c  asset.h  config.h  core.c  core.h  deccan.c  deccan.h  input.c  input.h  meson.build  renderer.c  renderer.h
src/Core/: Asset.c  Camera.c  Core.c  ECSystem.c  Input.c  Object.c  Scene.c
src/Physics/: Collision.c
src/Renderer/: Camera.c  Draw.c  Font.c  Renderer.c  Texture.c
src/Utils/: Message.c  Timer.c
src/core/: asset.c  asset.h  core.c  core.h  input.c  input.h  object.c  object.h  scene.c  scene.h
src/corelib/: Config.h  Deccan.h  meson.build
src/corelib/Core/: Core.c  Core.h  FileSys.c  FileSys.h  Handle.c  Handle.h  SDLHelper.c  SDLHelper.h  String.c  String.h  Timer.c  Timer.h  Utils.c  Utils.h  meson.build
src/corelib/Imgui/: Imgui.c  Imgui.h  meson.build
src/corelib/Main/: Main.c  Sources.c  meson.build
src/corelib/Physics/: Collision.c  Collision.h  Components.c  Components.h  Physics.c  Physics.h  Systems.c  Systems.h  meson.build
src/corelib/Renderer/: Color.c  Color.h  Framebuffer.c  Framebuffer.h  GenericPipeline.c  GenericPipeline.h  PrimitiveGeometry.c  PrimitiveGeometry.h  RenderTypes.h  Renderer.c  Renderer.h  Texture.c  Texture.h  meson.build
src/corelib/World/: Camera.c  Camera.h  Components.c  Components.h  DefaultAssets.c  DefaultAssets.h  Flecs.c  Flecs.h  Object.c  Object.h  Scene.c  Scene.h  Systems.c  Systems.h  meson.build
src/deccanengine/core/: core.c  core_internal.h  file_sys.c  handle.c  maths.c  sdl_helper.c  sdl_helper.h  string.c  timer.c  utils.c
src/deccanengine/main/: main.c  sources.c  splash_scene.c  splash_scene.h
src/deccanengine/physics/: collision.c  physics.c  transform_sync.c  transform_sync.h
src/deccanengine/renderer/: color.c  framebuffer.c  generic_pipeline.c  primitive_geometry.c  primitive_geometry.h  renderer.c  texture.c
src/deccanengine/world/: camera.c  components.c  components.h  default_assets.c  default_assets.h  flecs.c  flecs_internal.h  logo.h  object.c  scene.c  scene_layer.c  systems.c  systems.h  world.c  (+1 more)
src/editor/: Viewport.c  Viewport.h  main.c  meson.build
src/editor_vala/: main.vala  scene_editor.vala
src/logic/: collision.c  collision.h  rect.h
src/physics/: collider.h  collision.c  collision.h  rect.h  shape.h
src/renderer/: camera.c  camera.h  color.h  draw.c  draw.h  font.c  font.h  renderapi.h  renderer.c  renderer.h  texture.c  texture.h
src/sandbox/: main.c  meson.build  player.c  player.h
src/utils/: log.h  message.c  message.h  timer.c  timer.h  vector.h
subprojects/: freetype2.wrap  sdl2.wrap
(+48 files in other folders)
